Got game overlaping fixed

--- a/game.css
+++ b/game.css
@@ -1,5 +1,14 @@
 main {
-    flex-direction: row;
+  flex: 1;
+  display: flex;
+  flex-direction: row;
+  align-items: stretch;
+  padding-top: 92px; /* prevents going under fixed-top navbar */
+}
+
+
+main section{
+    height: 100%
 }
 
 .sidebar {
@@ -7,7 +16,6 @@ main {
     display: flex;
     flex-direction: column;
     align-items:normal;
-    justify-content: baseline;
 
     background-color: lightblue;
 }
@@ -16,11 +24,12 @@ main {
     flex: 1 50%;
     display: flex;
     flex-direction: column;
+    justify-content: center;
 }
 
 .apiplace {
     flex: 1 20%;
     display: flex;
     flex-direction: column;
-
+    background-color: aliceblue;
 }
